# X-IPE

./: .gitignore  .x-ipe.yaml  .x-ipe.yaml.example  AUDIT-INDEX.md  CHANGELOG.md  IDEATION_API_ANALYSIS.md  IDEATION_ARCHITECTURE_DIAGRAM.md  IDEATION_ENDPOINTS_DETAILED.md  QUICK-REFERENCE.md  README.md  README_IDEATION_ANALYSIS.md  UI-AUDIT-REPORT.md  X-IPE-SKILLS-SUMMARY.md  X-IPE_IDEATION_COMPREHENSIVE_OVERVIEW.md  package-lock.json  package.json  pyproject.toml  reproduce_terminal.py  vitest.config.js  x-ipe-skill-flow.txt
.copilot/: mcp-config.json
.github/: copilot-instructions.md
.github/copilot/: mcp-config.json
.x-ipe-checkpoint/session-20260317-155639/: manifest.yaml
config/: tools.json
docs/environment/: setup.md
docs/ideas/: .ideation-tools.json
docs/planning/: features.md  task-board-archive-1.md  task-board.md
docs/requirements/: requirement-details-index.md  requirement-details-part-1.md  requirement-details-part-2.md  requirement-details-part-3.md  requirement-details.md
playground/: README.md  architecture-html-demo.html  playground_ideas_upload.py  playground_ideation_toolbox.py  playground_interactive_console.py  playground_project_folders.py  playground_settings.py
playground/tests/: test_playground_ideas_upload.py  test_playground_ideation_toolbox.py  test_playground_interactive_console.py  test_playground_project_folders.py  test_playground_settings.py
src/: app.py  config.py  services.py
src/services/: __init__.py  file_service.py  (+3 more)
tests/: test_active_tracking_059c_cr1.py  test_architecture_draw_skill.py  test_architecture_dsl_skill.py  test_behavior_tracker_054bf.py  test_board_lib.py  test_change_indicator.py  test_cli.py  test_cli_adapter.py  test_cli_init_selection.py  test_cli_language.py  test_cli_migration.py  test_compose_idea_modal.py  test_config.py  test_config_layered.py  test_content_viewer.py  test_cr001_docx_msg_preview.py  test_editor.py  test_feature_037b.py  test_feature_038b.py  test_feature_038c.py  test_feature_041e.py  test_feature_041g.py  test_feature_047a_dao_skill.py  test_feature_047b_dao_migration.py  test_feature_047c_dao_instructions.py  test_feature_052a.py  test_feature_052b.py  test_feature_052c.py  test_feature_board_api.py  test_feature_board_page.py  test_feature_crud.py  test_homepage_infinity.py  test_ideas.py  test_ideas_cr006.py  test_inject_script.py  test_kb_core.py  test_kb_landing.py  test_kb_manager.py  test_kb_reference_cr004.py  test_kb_search.py  (+40 more)
x-ipe-docs/: skill-standards-reflection.md
(+2030 files in other folders)
