[project]
name = "development-task-instructions-test2"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "eventlet>=0.40.4",
    "flask>=3.1.2",
    "flask-socketio>=5.6.0",
    "gevent>=25.9.1",
    "gevent-websocket>=0.10.1",
    "ptyprocess>=0.7.0",
    "python-socketio>=5.16.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-flask>=1.3.0",
]
