[project]
name = "x-ipe"
version = "1.0.0"
description = "X-IPE: AI-powered development framework"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.0",
    "eventlet>=0.40.4",
    "flask>=3.1.2",
    "flask-socketio>=5.6.0",
    "gevent>=25.9.1",
    "gevent-websocket>=0.10.1",
    "ptyprocess>=0.7.0",
    "python-socketio>=5.16.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "watchdog>=6.0.0",
]

[project.scripts]
x-ipe = "x_ipe.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/x_ipe"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-flask>=1.3.0",
]
