[project]
name = "x-ipe"
version = "1.1.33"
description = "An AI native integrated project environment for end to end business value delivery"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.11.1",
    "click>=8.1.0",
    "dashscope>=1.25.9",
    "eventlet>=0.40.4",
    "extract-msg>=0.52.0",
    "fastmcp>=2.0.0",
    "flask>=3.1.2",
    "flask-socketio>=5.6.0",
    "gevent>=25.9.1",
    "gevent-websocket>=0.10.1",
    "mammoth>=1.8.0",
    "pillow>=12.1.0",
    "ptyprocess>=0.7.0",
    "python-socketio>=5.16.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "watchfiles>=0.24.0",
]

[project.scripts]
x-ipe = "x_ipe.cli:main"
x-ipe-mcp = "x_ipe.mcp.app_agent_interaction:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/x_ipe"]
exclude = ["src/x_ipe/resources/config"]

[tool.hatch.build.targets.wheel.force-include]
".github/skills" = "x_ipe/resources/skills"
".github/copilot-instructions.md" = "x_ipe/resources/copilot-instructions.md"
"x-ipe-docs/config" = "x_ipe/resources/config"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
    "pytest-flask>=1.3.0",
]
